--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,10 @@
 .card{
-    border: 3px;
-    border-radius: 5%;
-    border-color: black;
+    border: 1px solid black;
+    border-radius: 5px;
+    padding: 5px;
+}
+
+.header{
+
+    border-radius: 5px 5px 0px 0px;
 }
