--- a/static/css/a.css
+++ b/static/css/a.css
@@ -10,11 +10,11 @@
 
 .header{
 
-    font-size: 5vw;
+    font-size: 7vw;
 }
 
 .num{
-    font-size: 12vw;
+    font-size: 10vw;
 
 
 }
@@ -22,3 +22,18 @@
 body{
     background-color: cadetblue;
 }
+
+
+td {
+    padding-top: 30px;
+    padding: 20px;
+    text-align: center;
+  }
+  
+  table { 
+    margin: auto;
+    font-size: 2.6em;
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
+  
